# VSCodeCppTemplate

./: CMakeLists.txt
.circleci/: build.sh  config.yml
sources/: EncodeExp.h  Encoder.h  main.cpp
tests/: CMakeLists.txt
tests/sources/: hello_test.cpp
